solved the vertical text out of box bug

--- a/src/index.css
+++ b/src/index.css
@@ -1068,7 +1068,7 @@ button#create_custom_layout:hover {
   background: rgba(17, 17, 18, 0.92);
   backdrop-filter: blur(10px);
 
-  transform: translateX(0%);
+  transform: translateX(-100%);
   transition: transform 0.3s ease;
 }
 
